# apple-llvm-project

./: DEMO.md  README.md
.github/: CODEOWNERS
.github/workflows/: github-sync.yml  pr-code-format.yml
apple-ci/: amtool  pr.sh
apple-ci/clang/am/: build.sh
apple-docs/: AppleBranchingScheme.md
apple-llvm-config/am/: am-config.json
clang/: CMakeLists.txt
clang-tools-extra/clang-move/: Move.cpp
clang-tools-extra/clang-tidy/: ClangTidyCheck.cpp  ClangTidyCheck.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyOptions.cpp  ClangTidyProfiling.cpp  ExpandModularHeadersPPCallbacks.cpp  ExpandModularHeadersPPCallbacks.h  NoLintDirectiveHandler.cpp
clang-tools-extra/clang-tidy/abseil/: DurationAdditionCheck.cpp  DurationComparisonCheck.cpp  DurationConversionCastCheck.cpp  DurationFactoryFloatCheck.cpp  DurationFactoryScaleCheck.cpp  DurationRewriter.cpp  DurationSubtractionCheck.cpp  FasterStrsplitDelimiterCheck.cpp  TimeComparisonCheck.cpp  TimeSubtractionCheck.cpp
clang-tools-extra/clang-tidy/altera/: KernelNameRestrictionCheck.cpp
clang-tools-extra/clang-tidy/bugprone/: ArgumentCommentCheck.cpp  BadSignalToKillThreadCheck.cpp  BugproneTidyModule.cpp  CMakeLists.txt  EasilySwappableParametersCheck.cpp  ImplicitWideningOfMultiplicationResultCheck.cpp  InfiniteLoopCheck.cpp  NotNullTerminatedResultCheck.cpp  ReservedIdentifierCheck.cpp  SignalHandlerCheck.cpp  StandaloneEmptyCheck.cpp  SuspiciousIncludeCheck.cpp  SuspiciousMemoryComparisonCheck.cpp  UncheckedOptionalAccessCheck.cpp  UseAfterMoveCheck.cpp
clang-tools-extra/clang-tidy/concurrency/: MtUnsafeCheck.cpp
clang-tools-extra/clang-tidy/cppcoreguidelines/: InitVariablesCheck.cpp  ProBoundsConstantArrayIndexCheck.cpp  VirtualClassDestructorCheck.cpp
clang-tools-extra/clang-tidy/google/: AvoidThrowingObjCExceptionCheck.cpp  TodoCommentCheck.cpp  UpgradeGoogletestCaseCheck.cpp
clang-tools-extra/clang-tidy/hicpp/: ExceptionBaseclassCheck.cpp
clang-tools-extra/clang-tidy/llvm/: IncludeOrderCheck.cpp
clang-tools-extra/clang-tidy/llvmlibc/: RestrictSystemLibcHeadersCheck.cpp
clang-tools-extra/clang-tidy/misc/: CMakeLists.txt  MiscTidyModule.cpp  RedundantExpressionCheck.cpp  StaticAssertCheck.cpp  (+1 more)
clang-tools-extra/clangd/: ClangdLSPServer.h  ConfigCompile.cpp  Diagnostics.cpp  Headers.cpp  Headers.h  ParsedAST.cpp  TUScheduler.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/modularize/: CoverageChecker.cpp  Modularize.cpp  ModularizeUtilities.cpp  PreprocessorTracker.cpp
clang-tools-extra/pp-trace/: PPCallbacksTracker.cpp
clang/docs/: LibASTMatchersReference.html  PointerAuthentication.rst  ReleaseNotes.rst  UsersManual.rst
clang/include/: module.modulemap
clang/lib/: CMakeLists.txt
clang/test/: CMakeLists.txt  lit.cfg.py
clang/tools/: CMakeLists.txt
clang/www/: cxx_dr_status.html  cxx_status.html
cmake/Modules/: CMakePolicy.cmake
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: builtin-config-ix.cmake  config-ix.cmake
compiler-rt/test/: lit.common.cfg.py  lit.common.configured.in
libcxx/include/: __config
libunwind/test/: forceunwind.pass.cpp  unwind_leaffunction.pass.cpp
lld/COFF/: Config.h  Driver.cpp  Driver.h  DriverUtils.cpp  Options.td
lld/Common/: Filesystem.cpp
lld/ELF/: Driver.h  DriverUtils.cpp  SyntheticSections.cpp
lld/MachO/: CMakeLists.txt  Config.h  Driver.cpp  Driver.h  DriverUtils.cpp  FileSystem.cpp  FileSystem.h  InputFiles.cpp  InputFiles.h  Options.td  SymbolTable.cpp  SyntheticSections.cpp
lld/MinGW/: Driver.cpp
lld/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
lld/wasm/: Driver.cpp  InputChunks.h  InputFiles.cpp  MarkLive.cpp  OutputSections.cpp  SyntheticSections.cpp
lldb/: CMakeLists.txt
lldb/bindings/: CMakeLists.txt  headers.swig  interfaces.swig
lldb/docs/: index.rst  lldb-gdb-remote.txt
lldb/lldb.xcodeproj/: project.pbxproj
lldb/scripts/: CMakeLists.txt
lldb/scripts/Python/: finishSwigPythonLLDB.py
lldb/scripts/Python/static-binding/: LLDBWrapPython.cpp
lldb/scripts/Xcode/: build-llvm.py
lldb/scripts/Xcode/repos/: swift-monorepo-github-swift-5.1-branch.json
lldb/source/Plugins/ExpressionParser/Swift/: CMakeLists.txt  SwiftASTManipulator.cpp  SwiftExpressionParser.cpp  SwiftPersistentExpressionState.cpp  SwiftPersistentExpressionState.h  SwiftREPL.cpp  SwiftREPLMaterializer.cpp  SwiftUserExpression.cpp
lldb/test/: CMakeLists.txt
lldb/unittests/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/docs/: CMake.rst  LangRef.rst  PointerAuth.md  TestingGuide.rst  TypeMetadata.rst
llvm/include/: module.modulemap
llvm/lib/: CMakeLists.txt
llvm/lib/RemoteCachingService/: CMakeLists.txt  GRPCRelayCAS.cpp  compilation_caching_cas.proto  compilation_caching_kv.proto
llvm/lib/RemoteCachingService/CAS/: CMakeLists.txt  GRPCRelayCAS.cpp
llvm/lib/RemoteCachingService/Client/: Client.cpp
llvm/lib/RemoteCachingService/NullService/: NullService.cpp
llvm/lib/RemoteCachingService/RemoteCacheServer/: LLVMCASCacheProvider.cpp  RemoteCacheProvider.h  RemoteCacheServer.cpp
llvm/lib/Support/BLAKE3/: CMakeLists.txt
llvm/test/: CMakeLists.txt  lit.cfg.py
llvm/tools/: CMakeLists.txt
llvm/unittests/: CMakeLists.txt
llvm/unittests/CAS/: ActionCacheTest.cpp  CASDBTest.cpp  CASFileSystemTest.cpp  CASOutputBackendTest.cpp  CASReferenceTest.cpp  CASTestConfig.cpp  CASTestConfig.h  CASUtilsTest.cpp  CMakeLists.txt  CachingOnDiskFileSystemTest.cpp  HashMappedTrieTest.cpp  HierarchicalTreeBuilderTest.cpp  LazyAtomicPointerTest.cpp  MockGRPCServer.cpp  ObjectStoreTest.cpp  OnDiskHashMappedTrieTest.cpp  ThreadSafeAllocatorTest.cpp  TreeSchemaTest.cpp
llvm/unittests/CASObjectFormats/: BlockDataTest.cpp  CMakeLists.txt  EncodingTest.cpp  FixupListTest.cpp  FlatV1SchemaTest.cpp  NestedV1SchemaTest.cpp  NestedV1TargetListTest.cpp  TargetInfoListTest.cpp
llvm/unittests/ExecutionEngine/CASObjectFormat/: CMakeLists.txt  EncodingTest.cpp  FixupListTest.cpp  ObjectFileSchemaTest.cpp  TargetInfoListTest.cpp  TargetListTest.cpp
llvm/unittests/TableGen/: CMakeLists.txt  ScanDependenciesTest.cpp
(+3031 files in other folders)
